# vtab

./: CMakeLists.txt  LICENSE  README.md  config.h  vtab.cc  vtab_test.cc
buffer/: buffer_pool.cc  buffer_pool.h  buffer_pool_test.cc  lru.cc  lru.h  lru_test.cc
catalog/: column.cc  column.h  schema.cc  schema.h
disk/: disk.cc  disk.h  disk_test.cc
page/: data_page.cc  data_page.h  data_page_test.cc  header_page.cc  header_page.h  header_page_test.cc  page.h
sqlite/: client.cc  client.h  cursor.h  virtual_table.h
table/: row_id.h  table_heap.cc  table_heap.h  table_heap_test.cc  table_iterator.cc  table_iterator.h  table_iterator_test.cc  tuple.cc  tuple.h  tuple_test.cc
type/: double.cc  double.h  integer.cc  integer.h  text.cc  text.h  type.cc  type.h  type_id.h  value.cc  value.h
